# fortran_builds

./: .gitignore  README.md  meson.build
build_manually/: script.bat
doc/: Doxyfile  index.md  meson.build
src/: Makefile  functions.f90  hello.f90  meson.build  tabulate.f90  tmp
subprojects/: test-drive.wrap
tests/: meson.build  test_suite1.f90  test_suite2.f90  tester.f90
